Add pt_regs handling in aya-bpf/args.rs for riscv64
This patch introduces `pt_regs` handling in aya-bpf/args.rs
for the riscv64 architecture. The current CI is disabled
for riscv64 because this implementation is missing.

--- a/.github/workflows/build-aya-bpf.yml
+++ b/.github/workflows/build-aya-bpf.yml
@@ -21,8 +21,7 @@ jobs:
           - x86_64
           - aarch64
           - arm
-          # Disable riscv64 due to missing pt_regs handling in aya-bpf/args.rs
-          # - riscv64
+          - riscv64
     runs-on: ubuntu-20.04
 
     steps:
