--- a/aya-bpf-macros/Cargo.toml
+++ b/aya-bpf-macros/Cargo.toml
@@ -14,3 +14,6 @@ syn = {version = "1.0", features = ["full"]}
 
 [dev-dependencies]
 aya-bpf = { path = "../bpf/aya-bpf" }
+
+[features]
+btf-maps = []
