--- a/aya-bpf-macros/Cargo.toml
+++ b/aya-bpf-macros/Cargo.toml
@@ -9,6 +9,7 @@ proc-macro = true
 
 [dependencies]
 proc-macro2 = "1.0"
+proc-macro-error = "1.0"
 quote = "1.0"
 syn = {version = "2.0", features = ["full"]}
 
