--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -14,3 +14,10 @@ proc-macro2 = "1"
 indoc = "2.0"
 lazy_static = "1"
 serde_json = "1"
+reqwest = { version = "0.11.18", default-features = false, features = [
+    "blocking",
+    "rustls-tls",
+] }
+which = "4.4.0"
+itertools = "0.11.0"
+tempfile = "3.6.0"
