--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -5,6 +5,10 @@ authors = ["Alessandro Decina <alessandro.d@gmail.com>"]
 edition = "2021"
 
 [dependencies]
+reqwest = { version = "0.11.18", default-features = false, features = [
+"blocking",
+"default-tls",
+] }
 aya-tool = { path = "../aya-tool" }
 clap = { version = "4", features = ["derive"] }
 anyhow = "1"
@@ -14,3 +18,6 @@ proc-macro2 = "1"
 indoc = "2.0"
 lazy_static = "1"
 serde_json = "1"
+which = "4.4.0"
+itertools = "0.11.0"
+tempfile = "3.6.0"
