--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -5,11 +5,12 @@ authors = ["Alessandro Decina <alessandro.d@gmail.com>"]
 edition = "2021"
 
 [dependencies]
-aya-tool = { path = "../aya-tool" }
-clap = { version = "4", features = ["derive"] }
 anyhow = "1"
-syn = "2"
-quote = "1"
-proc-macro2 = "1"
+aya-tool = { path = "../aya-tool" }
+cargo_metadata = "0.15.4"
+clap = { version = "4", features = ["derive"] }
 indoc = "2.0"
+proc-macro2 = "1"
+quote = "1"
 serde_json = "1"
+syn = "2"
