--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -16,3 +16,6 @@ procfs = "0.15.1"
 rbpf = "0.2.0"
 tempfile = "3.3.0"
 tokio = { version = "1.24", features = ["rt", "rt-multi-thread", "sync", "time"] }
+
+[build-dependencies]
+cargo_metadata = "0.15.4"
