--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -20,3 +20,6 @@ object = { version = "0.31", default-features = false, features = [
 rbpf = "0.2.0"
 tempfile = "3.3.0"
 tokio = { version = "1.24", default-features = false, features = ["time"] }
+
+[build-dependencies]
+cargo_metadata = "0.15.4"
