ci: Include mips architecture in tests
Signed-off-by: Dave Tucker <dave@dtucker.co.uk>

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -15,3 +15,6 @@ linker = "powerpc64le-linux-gnu-gcc"
 
 [target.s390x-unknown-linux-gnu]
 linker = "s390x-linux-gnu-gcc"
+
+[target.mips-unknown-linux-gnu]
+linker = "mips-linux-gnu-gcc"
