--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,6 +83,7 @@ jobs:
           - riscv64gc-unknown-linux-gnu
           - powerpc64le-unknown-linux-gnu
           - s390x-unknown-linux-gnu
+          - mips-unknown-linux-gnu
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -141,6 +142,7 @@ jobs:
           - riscv64
           - powerpc64
           - s390x
+          - mips
         target:
           - bpfel-unknown-none
           - bpfeb-unknown-none
